# Simulador-de-Planificacion-de-procesos

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  RR.cpp  RR.h  SJF.cpp  SJF.h  SRTF.cpp  SRTF.h  base.h  controller.cpp  controller.h  cpu.cpp  cpu.h  fcfs.cpp  fcfs.h  main  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  npps.cpp  npps.h  process.cpp  process.h  ps.cpp  ps.h  random_selection.cpp  random_selection.h  utils.cpp  utils.h
